# vessel-anomaly-detection

./: .gitignore  README.md  environment.yml  install-micromamba.sh  pyproject.toml
data/: README.md
experiments/: inference.ipynb  learning-curves.ipynb  results.ipynb
notebooks/data-processing/: 01_preprocess-weather.ipynb  02_pkl-to-df.ipynb  04_join-ais-weather.ipynb  05_df-to-pkl.ipynb
notebooks/model-training/: baseline.ipynb  components.ipynb  weather-enriched.ipynb
src/vad/: architectures.py  datasets.py  utils.py
